<resources>
    <string name="app_name" translatable="false">PocketLauncher</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="minimize">Minimize</string>
    <string name="are_you_sure_exit">Are you sure exit?</string>
    <string name="accounts">Accounts</string>
    <string name="games">Games</string>
    <string name="download">Download</string>
    <string name="launch_game">Launch Game</string>
    <string name="microsoft_account">Microsoft</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_game">New Game</string>
    <string name="install_from_device_installed">Install from packages installed on the device</string>
    <string name="select_an_application">Select an application</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="instance_name">Instance Name</string>
    <string name="installing">Installing</string>
    <string name="copying">Copying</string>
    <string name="install_success" >Install success</string>
    <string name="install_failed">Install failed</string>
    <string name="invalid_instance_name">Invalid instance name</string>
    <string name="instance_name_is_used">Instance name is used</string>
    <string name="init_installation_program">Initialize installation program</string>
    <string name="creating_manifest">Creating manifest file</string>
    <string name="no_instance_selected">No instance selected</string>
    <string name="no_instance_installed">No instance installed</string>
    <string name="check_instance">Check instance</string>
    <string name="load_mods">Load mods</string>
    <string name="launch_failed">Launch failed</string>
    <string name="failed_to_check_instance">Failed to check instance</string>
    <string name="verifying_entity_files">Verifying entity files</string>
    <string name="patch_dex">Patch dex</string>
    <string name="patch_so">Patch shared object</string>
    <string name="unsupported_android_system">Unsupported Android system</string>
    <string name="android_system_version_not_supported">Your Android system version Android %s (SDK %s) is not supported. Currently, Android 9.0 (SDK 28) or above is required. Please wait for future updates to gain support.</string>
    <string name="patch_asset">Patch asset</string>
    <string name="edit_instance">Edit Instance</string>
    <string name="settings">Settings</string>
    <string name="mods">Mods</string>
    <string name="working_directory">Working Directory</string>
    <string name="instance_icon">Instance Icon</string>
    <string name="global_game_storage">Global game storage</string>
    <string name="isolated_game_storage">Isolated game storage</string>
    <string name="working_directory_set_to">Working directory set to %s</string>
    <string name="failed_to_load_mods">Failed to load mods</string>
    <string name="invalid_mod_package_name">Invalid mod package name</string>
    <string name="failed_to_change_mod_status">Failed to change mod status</string>
    <string name="invalid_mod_version">Invalid mod version name</string>
    <string name="information">Information</string>
    <string name="information_no_mods">No mod is adapted to the current instance</string>
    <string name="launcher">Launcher</string>
    <string name="game">Game</string>
    <string name="device_model">Device Model</string>
    <string name="reset">Reset</string>
    <string name="repackaging_apk">Repackaging APK</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="all_instances">All Instances</string>
    <string name="leave_blank_to_follow_global">Leave blank to follow global settings</string>
    <string name="install_from_apk_file">Install from APK file</string>
    <string name="you_need_to_grant_permission_to_continue">You need to grant permission to continue</string>
    <string name="invalid_file_type">Invalid file type</string>
    <string name="caching_apk">Caching APK</string>
    <string name="warning_arch_incompatible">Process architecture %s is incompatible with instance architecture %s. You need to install %s architecture of %s to continue</string>
    <string name="loading">Loading</string>
    <string name="loading_packages">Loading packages</string>
    <string name="delete_instance">Delete Instance</string>
    <string name="delete_instance_confirm">Are you sure you want to remove instance %s? This will delete all data of the instance (including your game saves, etc.)</string>
    <string name="delete_and_abandon_saves">Delete And Abandon Saves</string>
    <string name="removing_files">Removing files</string>
    <string name="instance_deleted">Instance %s deleted</string>
</resources>