<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="?attr/colorPrimary">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:tag="title_bar_icon"
            android:src="@drawable/ic_launcher_foreground" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            android:layout_marginEnd="4dp"
            android:tag="title_bar_back"
            android:padding="8dp"
            android:background="@drawable/ripple_circular"
            android:src="@drawable/arrow_back_24px"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimary" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="16dp"
            android:tag="title_bar_title"
            tools:ignore="SpUsage" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/minimize"
            android:scaleType="fitCenter"
            android:tag="title_bar_minimize"
            android:padding="8dp"
            android:background="@drawable/ripple_circular"
            android:src="@drawable/minimize_48px"
            app:tint="?attr/colorOnPrimary" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/exit"
            android:scaleType="fitCenter"
            android:tag="title_bar_exit"
            android:padding="8dp"
            android:background="@drawable/ripple_circular"
            android:src="@drawable/close_48px"
            app:tint="?attr/colorOnPrimary" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="container" />

</LinearLayout>